# pyaoa

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
doc/: README.md
examples/NACA0012/: NACA0012.py  README.md  analysis.py  setup.yaml  setup.yml
examples/NACA0012/post/NACA0012/: sim_Re_8e5.csv
examples/NACA0012/pre/geom/: NACA0012.stp
examples/NACA0012/run/: 2d_base-inc.cas.h5
examples/Selig S1210/pre/geom/: S1210.stp
pyaoa/: aoa.py
src/: aoa.py  matplotlib.yml
src/pyaoa/: aoa.py
tests/TEG2618/: basis.py
tests/TEG2618/pre/: input.yaml
tests/TEG2618_variations/: TEG2618_variations.py  analysis.py  setup.yaml  setup_old.yaml
tests/TEG2618_variations/post/TEG2618/: alpha_-0.3333_drag.out  alpha_-0.3333_lift.out  alpha_-1.0_drag.out  alpha_-1.0_lift.out  alpha_-1.6667_drag.out  alpha_-1.6667_lift.out  alpha_-2.3333_drag.out  alpha_-2.3333_lift.out  alpha_-3.0_drag.out  alpha_0.3333_drag.out  alpha_0.3333_lift.out  alpha_1.0_drag.out  alpha_1.0_lift.out  alpha_1.6667_drag.out  alpha_1.6667_lift.out  alpha_2.3333_drag.out  alpha_2.3333_lift.out  alpha_3.0_drag.out
tests/TEG2618_variations/pre/: calculations.yaml
tests/TEG2618_variations/run/: TEG2618_variations.jou
tests/pyfluent/: pyfluent_test.py
