[project]
name = "pyaoa"
version = "0.1"
authors = [
  { name="inflowencer", email="jason7bernhard@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/inflowencer/pyaoa"
"Bug Tracker" = "https://github.com/pypa/pyaoa/issues"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
