[metadata]
name = pyaoa
version = 0.1
description-file = README.md
license_files = LICENSE
description = Python package to automatically analyze objects in external aerodynamic flow for a range of angle-of-attack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/inflowencer/pyaoa
project_urls =
    Bug Tracker = https://github.com/inflowencer/pyaoa/issues
    Changelog = https://github.com/inflowencer/pyaoa/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point